<resources>
    <string name="app_name">Trackuriboh</string>
    <string name="preference_file_key">tang.song.edu.PREFERENCE_FILE_KEY</string>

    <string name="lbl_rename">Rename</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_up_to_date">Up to date</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_upcoming">Upcoming</string>
    <string name="lbl_earlier">Earlier</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_download">Download</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_create">Create</string>
    <string name="price_placeholder">\$%1$.2f</string>
    <string name="lbl_last_updated">Last Updated</string>
    <string name="lbl_total_card_count">Total Cards</string>
    <string name="lbl_total_card_set_count">Total Card Sets</string>
    <string name="lbl_latest_releases">Latest Releases</string>
    <string name="lbl_inf">inf</string>
    <string name="lbl_purchase">Purchase</string>
    <string name="lbl_sale">Sale</string>
    <string name="lbl_transaction">Transaction</string>
    <string name="lbl_transactions">Transactions</string>
    <string name="lbl_product">Product</string>
    <string name="lbl_sku">SKU</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_total_value">Total Value</string>

    <string name="progress_percent">%1$d%%</string>
    <string name="more_actions_action_title">More actions</string>

    <string name="lbl_permission_required">Permission Required</string>
    <string name="lbl_grant_permission">Grant Permissions</string>

    <!-- Bottom Nav -->
    <string name="lbl_database">Database</string>
    <string name="lbl_reminders">Reminders</string>
    <string name="lbl_user_lists">Lists</string>
    <string name="lbl_inventory">Inventory</string>

    <string name="lbl_all_printings">All Printings</string>

    <!-- Database -->
    <string name="tab_card_title">Cards</string>
    <string name="tab_set_title">Sets</string>
    <string name="database_sync_action_title">Sync</string>
    <string name="database_download_action_title">Force download</string>
    <string name="database_update_check_action_title">Check for updates</string>
    <string name="database_download_prompt_title">Force download database?</string>
    <string name="database_download_prompt_message">IMPORTANT: This will reset the database and may take several minutes to complete. This task cannot be cancelled once started, and your data may be lost if it finishes unsuccessfully. This task requires a stable Wi-Fi connection, and
        if no Wi-Fi connection is available this process will be queued to start once connected.</string>
    <string name="database_download_info">This process may take a up to a few minutes. Please feel free to background the app. We\'ll notify you when it\'s done.</string>
    <string name="database_download_worker_notification">Updating database…</string>
    <string name="database_download_failed">Database download failed.</string>
    <string name="database_download_cancelled">Database download cancelled.</string>
    <string name="database_download_success">Database download successful.</string>

    <string name="database_update_info">Updating Database…</string>
    <string name="database_update_failed">Database update failed</string>
    <string name="database_update_cancelled">Database update cancelled</string>
    <string name="database_update_success">Database update successful</string>

    <string name="database_update_check_info">Checking for updates…</string>
    <string name="database_update_check_failed">Checking for updates failed</string>
    <string name="database_update_check_cancelled">Checking for updates cancelled</string>
    <string name="database_update_check_prompt_title">Update Trackuriboh Database?</string>
    <string name="database_update_check_prompt_message">A new update is available to download. Please update for the newest card info.</string>

    <string name="database_update_check_no_update_available">The database is up to date.</string>

    <!-- Card List -->
    <string name="lbl_card_list">Card list</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_sort">Sort</string>

    <string name="lbl_best_match">Best Match</string>
    <string name="lbl_price_low_to_high">Price: Low to High</string>
    <string name="lbl_price_high_to_low">Price: High to Low</string>

    <!-- Card Item -->
    <string name="lbl_card_image">Card image</string>

    <!-- Card Set Item -->
    <string name="lbl_no_date_available">No Date Available</string>

    <!-- Card Detail -->
    <string name="lbl_prices">Prices</string>
    <string name="lbl_details">Details</string>
    <string name="lbl_view_on_tcgplayer">View on TCGPlayer</string>
    <string name="lbl_buy_now">Buy now</string>
    <string name="add_to_user_list_action_title">Add to list</string>
    <string name="add_to_user_list_success_message">Added to %1$s</string>

    <!-- Card Detail Overview -->
    <string name="lbl_number">Number</string>
    <string name="lbl_rarity">Rarity</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_attribute">Attribute</string>
    <string name="lbl_atkdef">A/D</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_card_details">Card Details</string>
    <string name="lbl_set">Set</string>
    <string name="card_detail_atk_def">%1$d \/ %2$d</string>

    <!-- Prices -->
    <string name="lbl_not_available">Not Available</string>
    <string name="lbl_price_lowest_listing_usd">Lowest Listing + Shipping</string>
    <string name="base_price_with_shipping">\$%1$.2f + %2$.2f</string>
    <string name="base_price_with_free_shipping">\$%1$.2f + Free</string>

    <string name="market_price_placeholder">Market Price: \$%1$.2f</string>
    <string name="lowest_listing_price_with_shipping_price_placeholder">Lowest Listing Price + Shipping: %1$s</string>
    <string name="quantity_at_average_purchase_price_placeholder">Quantity @ Average Purchase Price: %1$s</string>
    <string name="unrealized_profit_per_card_placeholder">Unrealized Profit Per Card: %1$s</string>
    <string name="total_unrealized_profit_placeholder">Total Unrealized Profit: \$%1$.2f</string>
    <string name="total_realized_profit_placeholder">Total Realized Profit: \$%1$.2f</string>
    <string name="gross_profit_placeholder">Gross Profit: \$%1$.2f</string>
    <string name="total_purchase_amount_placeholder">Total Purchase Amount: \$%1$.2f</string>

    <!-- Search -->
    <string name="search_action_title">Search</string>

    <!-- Error -->
    <string name="error_title_generic">Error</string>
    <string name="error_message_generic">An error has occurred.</string>

    <!-- Facebook -->
    <string name="facebook_app_id">236802761727077</string>
    <string name="fb_login_protocol_scheme">fb236802761727077</string>
    <string name="facebook_client_token">5cbc3e0fd15bc7c41b702053ea1d1f62</string>

    <!-- User Lists -->
    <string name="create_new_list_action_title">Create a new list</string>
    <string name="create_user_list_option">Create a list</string>
    <string name="create_inventory_option">Create an inventory</string>
    <string name="user_list_type_list">List</string>
    <string name="user_list_type_inventory">Inventory</string>

    <string name="rename_user_list_action_title">Rename list</string>
    <string name="create_user_list_prompt">You currently don\'t have any lists. Please create one to continue.</string>

    <!-- User List Item -->
    <string name="item_user_list_title">&lt;b>%1$s&lt;/b></string>
    <string name="item_user_list_total_value">Total value: \$%1$.2f</string>
    <string name="item_user_list_card_count">%1$d Cards</string>
    <string name="quantity_avg_price_oneline">%1$d @ \$%2$.2f</string>
    <string name="item_user_list_profit_with_percentage">\$%1$.2f \(%2$s%%\)</string>

    <!-- User List Detail -->
    <string name="user_list_remove_entries_action_title">Remove items</string>
    <string name="lbl_add_to_list">Add to list</string>

    <plurals name="user_list_detail_total_count">
        <item quantity="one">Total: %1$d card</item>
        <item quantity="other">Total: %1$d cards</item>
    </plurals>

    <!-- Card Selection -->
    <string name="lbl_select_card">Select card</string>

    <!-- Reminders -->
    <string name="reminder_type_auction">Auction</string>
    <string name="reminder_type_claim_sale">Claim Sale</string>
    <string name="reminder_type_listing">Listing</string>
    <string name="reminder_type_other_event">Other</string>
    <string name="reminder_notification_title">Trackuriboh Reminder</string>
    <string name="reminder_notification_message">%1$s is starting soon!</string>
    <string name="reminder_permission_request_message">This reminder is currently saved, but Trackuriboh needs alarm permissions to activated it. Please</string>
    <string name="reminder_open_fail_message">There seems to be an issue with the attached link. Please verify it is valid.</string>

    <!-- Reminder Form -->
    <string name="create_reminder_form_title">Create Reminder</string>
    <string name="edit_reminder_form_title">Edit Reminder</string>

    <string name="reminder_form_reminder_type_hint">Reminder me of…</string>
    <string name="reminder_form_date_time_hint"><![CDATA[Date & Time…]]></string>
    <string name="reminder_form_host_hint">Host…</string>
    <string name="reminder_form_link_hint">Link…</string>

    <!-- Reminder Item -->
    <string name="reminder_title" comment="E.g. Billy's Claim Sale">%1$s\'s %2$s</string>

    <!-- Add to user list form -->
    <string name="add_to_user_list_select_sku_hint">Select SKU…</string>
    <string name="add_to_user_list_select_list_hint">Select list…</string>

    <!-- Time Zones -->
    <!-- We have map each time zone to an actual ID in TimeZone.getAvailableIds() because using 3-letter
    time zone IDs is deprecated because of ambiguity -->
    <string name="timezone_eastern_time">EST/EDT (Eastern Time)</string>
    <string name="timezone_pacific_time">PST/PDT (Pacific Time)</string>
    <string name="timezone_mountain_time">MST/MDT (Mountain Time)</string>
    <string name="timezone_central_time">CST/CDT (Central Time)</string>

    <string name="timezone_daylight_savings_active">This time zone is observing daylight savings.</string>
    <string name="timezone_standard_time_active">This time zone is observing standard time.</string>

    <!-- Notifications -->
    <string name="database_sync_notification_channel_id">database_sync_channel</string>
    <string name="database_sync_notification_channel_name">Database Sync Status</string>

    <string name="reminder_notification_channel_id">reminder_channel</string>
    <string name="reminder_notification_channel_name">Reminders</string>

    <!-- Add transaction Form -->
    <string name="new_transaction">New Transaction</string>

    <string name="add_transaction_select_sku_hint">Select a SKU</string>
    <string name="add_transaction_select_card_hint">Select a card</string>
    <string name="add_transaction_select_date_hint">Select a date</string>

    <string name="add_transaction">Add Transaction</string>
</resources>

