<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search_action_title"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionLayout="@layout/search_view"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_database_sync"
        android:title="@string/database_sync_action_title"
        android:icon="@drawable/ic_baseline_update_24">
        <menu>
            <item
                android:id="@+id/action_database_update_check"
                android:title="@string/database_update_check_action_title" />
            <item
                android:id="@+id/action_database_download"
                android:title="@string/database_download_action_title" />
        </menu>
    </item>
</menu>