<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/database_status_view_padding">

        <TextView
            android:id="@+id/last_updated_lbl_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_last_updated"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextAppearance.MaterialComponents.Overline" />

        <TextView
            android:id="@+id/last_updated_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_updated_lbl_textview"
            style="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="Jan 01, 2022" />

        <TextView
            android:id="@+id/total_card_count_lbl_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/heading_text_spacing"
            android:text="@string/lbl_total_card_count"
            app:layout_constraintEnd_toStartOf="@+id/total_card_set_count_lbl_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_button"
            style="@style/TextAppearance.MaterialComponents.Overline" />

        <TextView
            android:id="@+id/total_card_count_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/total_card_count_lbl_textview"
            app:layout_constraintEnd_toEndOf="@id/total_card_count_lbl_textview"
            app:layout_constraintTop_toBottomOf="@+id/total_card_count_lbl_textview"
            style="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="10000" />

        <TextView
            android:id="@+id/total_card_set_count_lbl_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_total_card_set_count"
            app:layout_constraintStart_toEndOf="@id/total_card_count_lbl_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total_card_count_lbl_textview"
            style="@style/TextAppearance.MaterialComponents.Overline" />

        <TextView
            android:id="@+id/total_card_set_count_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/total_card_set_count_lbl_textview"
            app:layout_constraintEnd_toEndOf="@id/total_card_set_count_lbl_textview"
            app:layout_constraintTop_toBottomOf="@+id/total_card_set_count_lbl_textview"
            style="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="500" />
        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_up_to_date"
            android:enabled="false"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/update_progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="@id/update_button"
            app:layout_constraintEnd_toEndOf="@id/update_button"
            app:layout_constraintTop_toTopOf="@id/update_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>